<resources>
    <string name="app_name" translatable="false">Remove Background</string>
    <string name="img_project_empty">img_project_empty</string>
    <string name="there_are_no_projects_yet">There are no projects yet</string>
    <string name="home">Home</string>
    <string name="your_projects">Your Projects</string>
    <string name="setting">Setting</string>
    <string name="remove_bg">Remove BG</string>
    <string name="iv_remove_object">iv_remove_object</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="instantly_remove_the_background_from_any_image_with_precision">Instantly remove the background from any image with precision.</string>
    <string name="object_remove">Object Remove</string>
    <string name="effortlessly_erase_unwanted_objects_from_your_photos_for_a_clean_natural_look">Effortlessly erase unwanted objects from your photos for a clean, natural look.</string>
    <string name="remove_background">Remove background</string>
    <string name="ic_eraser">ic_eraser</string>
    <string name="view_all">View all</string>
    <string name="ic_back">ic_back</string>
    <string name="export">Export</string>
    <string name="ic_share">ic_share</string>
    <string name="share">Share</string>
    <string name="img_result">img_result</string>
    <string name="iv_photo_selected">iv_photo_selected</string>
    <string name="iv_photo">iv_photo</string>
    <string name="ic_calendar">ic_calendar</string>
    <string name="ic_clock">ic_clock</string>
    <string name="ic_menu">ic_menu</string>
    <string name="creative_1">creative-1</string>
    <string name="_01_59">01:59</string>
    <string name="_12_03_2023">12-03-2023</string>
    <string name="ic_download">ic_download</string>
    <string name="delete">Delete</string>
    <string name="ic_delete">ic_delete</string>
    <string name="your_image_has_been_saved_successfully">Your image has been saved successfully</string>
    <string name="ic_home_on">ic_home_on</string>
    <string name="i_want_to">I want to ...</string>
    <string name="skip">Skip</string>
    <string name="ic_hello">ic_hello</string>
    <string name="welcome_to_remove_bg">Welcome to Remove BG</string>
    <string name="iv_choose_purpose">iv_choose_purpose</string>
    <string name="iv_choose_rmv_bg">iv_choose_rmv_bg</string>
    <string name="iv_choose_rmv_obj">iv_choose_rmv_obj</string>
    <string name="ic_selected">ic_selected</string>
    <string name="color">Color</string>
    <string name="permission">Permission</string>
    <string name="img_permission">img_permission</string>
    <string name="remove_background_requires_these_permissions_to_function_properly">Remove background requires these permissions to function properly</string>
    <string name="notification">Notification</string>
    <string name="library">Library</string>
    <string name="countinue_without_permissions">Countinue without permission</string>
    <string name="remove_BG">Remove BG</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="ic_export">ic_export</string>
    <string name="ic_undo">ic_undo</string>
    <string name="ic_redo">ic_redo</string>
    <string name="edit">Edit</string>
    <string name="ic_before_after">ic_before_after</string>
    <string name="background">Background</string>
    <string name="Grant_Permission">Grant Permission</string>
    <string name="Please_grant_all_permissions">Please grant all permissions</string>
    <string name="Go_to_setting">Go to setting</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="color_picker">Color picker</string>
    <string name="color_ppicker">Color picker</string>
    <string name="gradient">Gradient</string>
    <string name="draw">Draw</string>
    <string name="text">Text</string>
    <string name="use_brush_to_manually_draw_over_objects">Use brush to manually draw over objects</string>
    <string name="brush_size">Brush size</string>
    <string name="remove">Remove</string>
    <string name="enter_your_object_you_want_to_remove">Enter your object you want to remove</string>
    <string name="ic_arrow_right_double">ic arrow right double</string>
    <string name="iv_color_end">iv color end</string>
    <string name="iv_color_start">iv color start</string>
    <string name="iv_gradient_color">iv gradient color</string>
    <string name="iv_item_background">iv item background</string>
    <string name="iv_selected_background">iv selected background</string>
    <string name="_20">20</string>
    <string name="iv_bottomsheet_dialog">iv bottomsheet dialog</string>
    <string name="iv_cancel">iv cancel</string>
    <string name="iv_selected">iv selected</string>
    <string name="remove_nbackground">Remove\nBackground</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising...</string>
    <string name="language">Language</string>
    <string name="i_want_to_remove_the_background_from_any_image_with_precision">I want to remove the background from any image with precision.</string>
    <string name="i_want_to_erase_unwanted_objects_from_photos_for_a_clean_natural_look">I want to erase unwanted objects from photos for a clean, natural look.</string>
    <string name="next">Next</string>
    <string name="title_1">Instant Background Removal</string>
    <string name="content_1">Eerase backgrounds with precision in a tap</string>
    <string name="title_2">Object Eraser</string>
    <string name="content_2">Delete unwanted items effortlessly</string>
    <string name="title_3">Auto Object Detection</string>
    <string name="content_3">AI instantly spots objects</string>
    <string name="title_4">Background Variety</string>
    <string name="content_4">Easily switch to any background</string>
    <string name="update_available">Update available</string>
    <string name="to_use_this_app_download_the_latest_version">To use this app, download the latest version</string>
    <string name="what_s_new">What’s new</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_available_due_to_network_or_service_issue">No internet connection available due to network or service issue</string>
    <string name="try_again">Try again</string>
    <string name="we_re_glad_to_have_you_here_again_let_s_pick_up_where_you_left_off_and_continue_your_journey">We\'re glad to have you here again. Let\'s pick up where you left off and continue your journey!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="contines">Contine</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that">Thank you for taking the time to rate us. I’m really appreciate that.</string>
    <string name="got_it">Got It.</string>
    <string name="choose_your_subject">Choose your subject</string>
    <string name="your_subject">Your subject</string>
    <string name="what_tip_you_like_to_give_us">What tip you like to give us?</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="send">Send</string>
    <string name="please_send_us_some_feedback">Please send us some feedback!</string>
    <string name="gmail_is_not_available_on_this_device_feedback_needs_to_be_sent_via_gmail_application">Gmail is not available on this device. Feedback needs to be sent via Gmail application</string>
    <string name="version">Version</string>
    <string name="do_you_like_this_app">Do you like this app?</string>
    <string name="let_us_know_your_experience_5_stars_is_the_best_on_google_play">Let us know your experience 5 stars is the best on Google Play!</string>
    <string name="submit">Submit</string>
    <string name="discard_changes">Discard Changes ?</string>
    <string name="are_you_sure_you_want_to_go_back">Are you sure you want to go back?</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading</string>
    <string name="maybe_ads_will_be_showed">Maybe ads will be showed</string>
    <string name="detecting">Detecting...</string>
    <string name="processing">Processing</string>
    <string name="select">Select</string>
    <string name="camera_photos"><![CDATA[Camera & Photos]]></string>
    <string name="generate">Generate</string>
    <string name="your_new_look_will_be_available_soon">Your new look will be available soon</string>
    <string name="your_request_position_in_queue">Your request position in queue</string>
    <string name="time_estimated_until_done">Time estimated until done</string>
    <string name="you_have_ran_out_of_your_free_generate_requests_today_come_back_tomorrow_for_more">You have ran out of your free generate requests today come back tomorrow.</string>
    <string name="your_photo_is_nbeing_remove_bg">Your photo is \nbeing remove BG.</string>
    <string name="your_photo_is_being_remove_object">Your photo is \nbeing Remove Object.</string>
    <string name="saved">Saved</string>
    <string name="download_successfully">Download Successfully</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="object_list">Object list</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit_app">Exit App?</string>
    <string name="your_photos">Your Photos</string>
    <string name="ok">OK</string>
    <string name="choose_option">Choose option</string>
    <string name="upload_timeout_please_try_again">Upload timeout. Please try again.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="please_grant_all_permissions_to_access_additional_functionality">Please grant all permissions to access additional functionality</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="remove_object">Remove object</string>
    <string name="background_removal">Background removal</string>
    <string name="edit_photo_s_background">Edit photo\'s background</string>
    <string name="change_the_background_from_any_image_with_precision">Change the background from any image with precision.</string>
    <string name="choose_photos">Choose Photos</string>
    <string name="choose_a_photo_to_start_editing_the_background">Choose a photo to start editing the background</string>
    <string name="no_photos">No photos available for editting backgrounds. Choose photos with backgrounds removed to continue</string>
    <string name="start_removing">Start removing your photo\'s background now!</string>
    <string name="try_now">Try now</string>
    <string name="sit_back">Sit back and relax—your stunning background edit is on its way!</string>
    <string name="try_Again">Try Again</string>
    <string name="result">Result</string>
    <string name="save_to_your_device">Save to your device</string>
    <string name="your_photo_s_object_is_being_detecting">Your photo\'s object\nis being detecting.</string>
    <string name="all_objects_in_the_photo_are_being_detected">All objects in the photo are being detected</string>
    <string name="that_object_is_being_removed_from_your_photo">That object is being removed from your photo</string>
    <string name="your_photo_s_object_is_being_removed">Your photo\'s object is being removed.</string>
    <string name="if_the_object">If the object you want to remove is not in the list above, type it here:</string>
    <string name="the_result_will_be_done_soon_stay_patient">The result will be done soon. Stay patient!</string>
</resources>