<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.main.remove_background.RemoveBackgroundActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_remove_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:contentDescription="@string/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont700
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomText_color_37414B_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/remove_BG"
            />
        <ImageView
            android:id="@+id/iv_export"
            android:contentDescription="@string/ic_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_export"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:contentDescription="@string/iv_choose_rmv_bg"
        android:id="@+id/iv_rmv_bg"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_result"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/ctl_remove_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_rmv_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:contentDescription="@string/ic_undo"
            android:id="@+id/iv_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_undo_off"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:contentDescription="@string/ic_redo"
            android:id="@+id/iv_redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_redo_off"
            app:layout_constraintStart_toEndOf="@+id/iv_undo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont600
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomText_color_37414B_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_redo"
            app:layout_constraintEnd_toStartOf="@+id/iv_before_after"
            android:text="@string/edit"/>
        <ImageView
            android:contentDescription="@string/ic_before_after"
            android:id="@+id/iv_before_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_before_after"
            android:layout_gravity=""/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E7ECF2"
        app:layout_constraintTop_toBottomOf="@id/ctl_function"
        />

    <LinearLayout
        android:id="@+id/ll_choose_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont600
            style="@style/CustomText_color_FF6846_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/color"
            android:textAlignment="center" />

        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont600
            style="@style/CustomText_color_8F9DAA_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background"
            android:textAlignment="center" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_choose_background">
        <include layout="@layout/fragment_list_color_background" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>