<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F8FF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp">
        <ImageView
            android:contentDescription="@string/ic_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hello"/>
        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont700
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/CustomText_color_37414B_20"
            android:paddingStart="12dp"
            android:text="@string/welcome_to_remove_bg"/>
    </Toolbar>

    <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont400
        android:id="@+id/tv_purpose"
        style="@style/CustomText_color_37414B_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/i_want_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingVertical="20dp"
        android:id="@+id/ctl_option_remove_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_border_white_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_purpose">


        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont700
            android:id="@+id/tv_title_remove_bg"
            style="@style/CustomText_color_37414B_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/remove_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont400
            android:id="@+id/tv_content_remove_bg"
            style="@style/CustomText_color_37414B_16"
            android:layout_width="match_parent"
            android:lineHeight="24dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:minLines="2"
            android:text="@string/instantly_remove_the_background_from_any_image_with_precision"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_remove_bg"
            tools:targetApi="p" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_option_remove_obj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="20dp"
        android:background="@drawable/bg_border_white_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctl_option_remove_bg" >
        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont700
            android:id="@+id/tv_title_remove_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/object_remove"
            style="@style/CustomText_color_37414B_18"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>
        <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont400
            android:id="@+id/tv_content_remove_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            style="@style/CustomText_color_37414B_16"
            android:lineHeight="24dp"
            android:text="@string/effortlessly_erase_unwanted_objects_from_your_photos_for_a_clean_natural_look"
            app:layout_constraintTop_toBottomOf="@id/tv_title_remove_object"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            tools:targetApi="p" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.vm.backgroundremove.objectremove.a8_app_utils.CustomTextView.CustomTextViewFont500
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="33dp"
        style="@style/CustomText_color_FFA637_20"
        app:layout_constraintTop_toBottomOf="@+id/ctl_option_remove_obj"/>

</androidx.constraintlayout.widget.ConstraintLayout>